--- a/ProjetoFrontEnd/index.html
+++ b/ProjetoFrontEnd/index.html
@@ -30,7 +30,7 @@
         <p>Selecione uma opção no menu para continuar.</p>
     </div>
 
-    <script src="index.js"></script>
+    <script src="scriptIndex.js"></script>
 
 </body>
 </html>
