Aperfeiçoamento das estruturas de todas as telas.

--- a/ProjetoFrontEnd/index.html
+++ b/ProjetoFrontEnd/index.html
@@ -17,11 +17,11 @@
     <nav id="sidebar">
         <h2>Menu</h2>
         <ul class="nav flex-column">
-            <li class="nav-item"><a href="#" class="nav-link text-white" onclick="loadPage('inicio')">Início</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white" onclick="loadPage('funcionarios')">Funcionários</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white" onclick="loadPage('sala_vacinas')">Sala de Vacinas</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white" id="auth-button" onclick="toggleAuth()"> Login</a></li>
-        </ul>
+            <li class="nav-item"><a href="index.html" class="nav-link text-white">Início</a></li>
+            <li class ="nav-item"><a href="funcionarios.html" class="nav-link text-white">Funcionários</a></li>
+            <li class ="nav-item"><a href="salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li>
+            <li class ="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>
+    </ul>
     </nav>
 
     <!-- Conteúdo da Página -->
