--- a/ProjetoFrontEnd/cartaoVacinas.html
+++ b/ProjetoFrontEnd/cartaoVacinas.html
@@ -9,15 +9,103 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Menu Lateral Simplificado -->
+
+    <!-- Botão para abrir a barra de navegação -->
     <button id="menu-toggle">☰</button>
+
+    <!-- Menu de navegação (toggle) - conteúdo -->
     <nav id="sidebar">
-        <h2>Menu</h2>
-        <ul class="nav flex-column">
-            <li class="nav-item"><a href="salaVacinas.html" class="nav-link text-white">Sala de Vacinas</a></li>
-            <li class="nav-item"><a href="cartaoVacina.html" class="nav-link text-white active">Cartão de Vacinas</a></li>
-        </ul>
-    </nav>
+    <h2>Menu</h2>
+    <ul class="nav flex-column">
+        <li class="nav-item"><a href="index.html" class="nav-link text-white">Início</a></li>
+        <li class ="nav-item"><a href="funcionarios.html" class="nav-link text-white">Funcionários</a></li>
+        <li class ="nav-item"><a href="salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li>
+        <li class ="nav-item"><a href="agendamentoVacina.html" class="nav-link text-white">Agendamento de Vacinas</a></li>
+        <li class ="nav-item"><a href="salaVacinaAplicacao.html" class="nav-link text-white">Aplicação de Vacinas</a></li> 
+        <li class="nav-item"><a href="vacinasHoje.html" class="nav-link text-white">Vacinas Futuras </a></li>
+        <li class="nav-item"><a href="cartaoVacinas.html" class="nav-link text-white">Cartão de Vacinas</a></li>
+        <li class ="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>  
+        <li class="nav-item"><a href="#" class="nav-link text-white" onclick="logout()">Sair</a></li>
+    </ul>
+
+    <style>
+    body 
+    {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+
+/* Botão Toggle */
+#menu-toggle {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    font-size: 24px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: #036c4b;
+    padding: 10px;
+    z-index: 1000;
+    }
+
+/* Sidebar (menu) */
+#sidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: #06c689;
+    color: white;
+    position: fixed;
+    left: -250px;
+    top: 0;
+    transition: left 0.3s ease-in-out;
+    padding: 20px;
+}
+
+#sidebar h2 {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 22px;
+}
+
+#sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+#sidebar ul li {
+    padding: 10px 0;
+}
+
+#sidebar ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+#sidebar ul li a:hover {
+    text-decoration: underline;
+}
+
+#sidebar.active {
+    left: 0;
+}
+
+/* Conteúdo Principal */
+/* Ajuste inicial do conteúdo */
+.content {
+    margin-left: 20px;
+    padding: 20px;
+    transition: margin-left 0.3s ease-in-out; /* Animação suave */
+}
+
+    /* Quando o menu estiver ativo, o conteúdo se move para a direita */
+    .sidebar-active .content {
+    margin-left: 270px; /* Ajuste conforme a largura do menu */
+    }
+    </style>
+</nav>
 
     <div class="content">
         <div class="container mt-4">
@@ -46,7 +134,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scriptCartaoVacina.js"></script>
 </body>
 </html>
