--- a/ProjetoFrontEnd/salaVacinaAplicacao.html
+++ b/ProjetoFrontEnd/salaVacinaAplicacao.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Botão para abrir a barra de navegação -->
+    <button id="menu-toggle">☰</button>
+
+    <!-- Menu de navegação (toggle) - conteúdo -->
+    <nav id="sidebar">
+        <h2>Menu</h2>
+        <ul class="nav flex-column">
+            <li class="nav-item"><a href="index.html" class="nav-link text-white">Início</a></li>
+        <li class ="nav-item"><a href="funcionarios.html" class="nav-link text-white">Funcionários</a></li>
+        <li class ="nav-item"><a href="salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li>
+        <li class ="nav-item"><a href="agendamentoVacina.html" class="nav-link text-white">Agendamento de Vacinas</a></li>
+        <li class ="nav-item"><a href="salaVacinaAplicacao.html" class="nav-link text-white">Aplicação de Vacinas</a></li> 
+        <li class="nav-item"><a href="vacinasHoje.html" class="nav-link text-white">Vacinas Futuras </a></li>
+        <li class="nav-item"><a href="cartaoVacinas.html" class="nav-link text-white">Cartão de Vacinas</a></li>
+        <li class ="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>  
+        <li class="nav-item"><a href="#" class="nav-link text-white" onclick="logout()">Sair</a></li>
+        </ul>
+    </nav>
+
     <div class="container mt-4">
         <h2>Aplicação de Vacinas</h2>
 
