Commit do william mais com finalizações

--- a/ProjetoFrontEnd/Vacinas/vacinasHoje.html
+++ b/ProjetoFrontEnd/Vacinas/vacinasHoje.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacinas do Dia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesSalaVacina.css">
 </head>
-<body>
 
+<body>
  <!-- Botão para abrir a barra de navegação -->
  <button id="menu-toggle">☰</button>
 
@@ -16,14 +16,12 @@
  <nav id="sidebar">
      <h2>Menu</h2>
      <ul class="nav flex-column">
-         <li class="nav-item"><a href="index.html" class="nav-link text-white">Início</a></li>
-     <li class ="nav-item"><a href="funcionarios.html" class="nav-link text-white">Funcionários</a></li>
-     <li class ="nav-item"><a href="salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li>
-     <li class ="nav-item"><a href="agendamentoVacina.html" class="nav-link text-white">Agendamento de Vacinas</a></li>
-     <li class ="nav-item"><a href="salaVacinaAplicacao.html" class="nav-link text-white">Aplicação de Vacinas</a></li> 
-     <li class="nav-item"><a href="vacinasHoje.html" class="nav-link text-white">Vacinas Futuras </a></li>
-     <li class="nav-item"><a href="cartaoVacinas.html" class="nav-link text-white">Cartão de Vacinas</a></li>
-     <li class ="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>  
+        <li class="nav-item"><a href="../index/index.html" class="nav-link text-white">Início</a></li>
+        <li class="nav-item"><a href="../funcionarios/funcionarios.html" class="nav-link text-white">Funcionários</a></li>
+        <li class="nav-item"><a href="../vacinas/salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li> 
+        <li class="nav-item"><a href="vacinasHoje.html" class="nav-link text-white">Vacinas Futuras</a></li>
+        <li class="nav-item"><a href="../vacinas/cartaoVacinas.html" class="nav-link text-white">Cartão de Vacinas</a></li>
+        <li class="nav-item"><a href="../login/login.html" class="nav-link text-white">Login</a></li>  
      <li class="nav-item"><a href="#" class="nav-link text-white" onclick="logout()">Sair</a></li>
      </ul>
  </nav>
@@ -132,7 +130,8 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scriptVacinasHoje.js"></script>
-    <script scr="scriptSalaVacina.js"></script>
+    
 </body>
 </html>
