--- a/ProjetoFrontEnd/Index/index.html
+++ b/ProjetoFrontEnd/Index/index.html
@@ -3,39 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <meta name="description" content="Sistema de gestão de vacinação para funcionários">
+    <title>Sistema de Vacinação - Home Page</title>
+    <!-- Pré-conexão para melhor performance -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link href="styles.css" rel="stylesheet">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
-    <!-- Botão para abrir a barra de navegação -->
-    <button id="menu-toggle">☰</button>
-
-    <!-- Menu de navegação (toggle) - conteúdo -->
-    <nav id="sidebar">
-        <h2>Menu</h2>
-        <ul class="nav flex-column">
-            
-        <li class="nav-item"><a href="index.html" class="nav-link text-white">Início</a></li>
-        <li class="nav-item"><a href="../Funcionários/funcionarios.html" class="nav-link text-white">Funcionários</a></li>
-        <li class="nav-item"><a href="../Vacinas/salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li> 
-        <li class="nav-item"><a href="../Vacinas/vacinasHoje.html" class="nav-link text-white">Vacinas Futuras</a></li>
-        <li class="nav-item"><a href="../Vacinas/cartaoVacinas.html" class="nav-link text-white">Cartão de Vacinas</a></li>
-        <li class="nav-item"><a href="../Login/login.html" class="nav-link text-white">Login</a></li>  
-        <li class="nav-item"><a href="#" class="nav-link text-white" onclick="logout()">Sair</a></li>  
-
+    <!-- Menu de navegação -->
+    <nav id="sidebar" aria-label="Menu principal">
+        <h2 class="text-center py-3">Menu</h2>
+        <ul class="nav flex-column px-3">
+            <li class="nav-item"><a href="index.html" class="nav-link text-white active"><i class="bi bi-house-door me-2"></i>Início</a></li>
+            <li class="nav-item"><a href="../Funcionários/funcionarios.html" class="nav-link text-white"><i class="bi bi-people me-2"></i>Funcionários</a></li>
+            <li class="nav-item"><a href="../Vacinas/salaVacina.html" class="nav-link text-white"><i class="bi bi-shield-plus me-2"></i>Sala de Vacinas</a></li>
+            <li class="nav-item"><a href="../Vacinas/vacinasHoje.html" class="nav-link text-white"><i class="bi bi-calendar-check me-2"></i>Vacinas Futuras</a></li>
+            <li class="nav-item"><a href="../Vacinas/cartaoVacinas.html" class="nav-link text-white"><i class="bi bi-card-checklist me-2"></i>Cartão de Vacinas</a></li>
+            <li class="nav-item"><a href="../Login/login.html" class="nav-link text-white"><i class="bi bi-box-arrow-in-right me-2"></i>Login</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-white" onclick="logout()"><i class="bi bi-box-arrow-left me-2"></i>Sair</a></li>
         </ul>
     </nav>
 
-    <!-- Conteúdo da Página -->
+    <!-- Conteúdo principal -->
     <div class="content" id="content">
-        <h2>Bem-vindo</h2>
-        <p>Selecione uma opção no menu para continuar.</p>
+        <!-- Botão para abrir o menu -->
+        <button id="menu-toggle" class="btn btn-primary" aria-label="Abrir menu" aria-expanded="false">
+            <i class="bi bi-list"></i>
+        </button>
+
+        <main class="container-fluid py-4 px-4">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h1 class="h2 mb-0"><i class="bi bi-shield-plus me-2"></i>Bem-vindo ao Sistema de Vacinação</h1>
+            </div>
+
+            <p class="lead">Selecione uma opção no menu para continuar.</p>
+            
+            <!-- Dashboard -->
+            <div class="row mt-5 g-4" id="dashboard">
+                <!-- Cards serão inseridos pelo JavaScript -->
+            </div>
+        </main>
+
+        <!-- Rodapé -->
+        <footer class="mt-auto py-3 bg-light text-center">
+            <div class="container">
+                <span class="text-muted">Sistema de Vacinação &copy; 2023</span>
+            </div>
+        </footer>
     </div>
 
-    <script src="scriptIndex.js"></script>
+    <!-- Toast Notification -->
+    <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100"></div>
 
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../navbar.js"></script>
+    <script src="scriptIndex.js"></script>
 </body>
 </html>
