--- a/ProjetoFrontEnd/Vacinas/cartaoVacinas.html
+++ b/ProjetoFrontEnd/Vacinas/cartaoVacinas.html
@@ -3,109 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cartão de vacinação dos funcionários">
     <title>Cartão de Vacinas</title>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="stylesSalaVacina.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+    <link href="../index/styles.css" rel="stylesheet">
+    <link href="stylesCartaoVacinas.css" rel="stylesheet">
 </head>
-
-<style>
-    #menu-toggle {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    font-size: 24px;
-    cursor: pointer;
-    background: none;
-    border: none;
-    color: #036c4b;
-    padding: 10px;
-    z-index: 1100;
-    transition: all 0.3s ease-in-out;
-}
-
-/* Sidebar */
-#sidebar {
-    width: 250px;
-    height: 100vh;
-    background-color: #06c689;
-    color: white;
-    position: fixed;
-    left: -250px;
-    top: 0;
-    transition: left 0.3s ease-in-out;
-    padding: 20px;
-    z-index: 1000;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-}
-
-#sidebar.active {
-    left: 0;
-}
-
-/* Conteúdo Principal */
-.content {
-    margin-left: 20px;
-    padding: 20px;
-    transition: margin-left 0.3s ease-in-out;
-}
-
-body.sidebar-active {
-    overflow-x: hidden;
-}
-
-/* Ajuste para o conteúdo quando a sidebar está aberta */
-body.sidebar-active .content {
-    margin-left: 270px;
-    width: calc(100% - 270px);
-}
-</style>
 <body>
+    <!-- Menu de navegação -->
+    <nav id="sidebar" aria-label="Menu principal">
+        <h2 class="text-center py-3">Menu</h2>
+        <ul class="nav flex-column px-3">
+            <li class="nav-item"><a href="../index/index.html" class="nav-link text-white"><i class="bi bi-house-door me-2"></i>Início</a></li>
+            <li class="nav-item"><a href="../Funcionários/funcionarios.html" class="nav-link text-white"><i class="bi bi-people me-2"></i>Funcionários</a></li>
+            <li class="nav-item"><a href="../vacinas/salaVacina.html" class="nav-link text-white"><i class="bi bi-shield-plus me-2"></i>Sala de Vacinas</a></li>
+            <li class="nav-item"><a href="../vacinas/vacinasHoje.html" class="nav-link text-white"><i class="bi bi-calendar-check me-2"></i>Vacinas Futuras</a></li>
+            <li class="nav-item"><a href="cartaoVacinas.html" class="nav-link text-white active"><i class="bi bi-card-checklist me-2"></i>Cartão de Vacinas</a></li>
+            <li class="nav-item"><a href="../login/login.html" class="nav-link text-white"><i class="bi bi-box-arrow-in-right me-2"></i>Login</a></li>
+        </ul>
+    </nav>
 
- <!-- Botão para abrir a barra de navegação -->
- <button id="menu-toggle">☰</button>
+    <!-- Conteúdo principal -->
+    <div class="content" id="content">
+        <!-- Botão para abrir o menu -->
+        <button id="menu-toggle" class="btn btn-primary" aria-label="Abrir menu" aria-expanded="false">
+            <i class="bi bi-list"></i>
+        </button>
 
- <!-- Menu de navegação (toggle) - conteúdo -->
- <nav id="sidebar">
-     <h2>Menu</h2>
-     <ul class="nav flex-column">
-        <li class="nav-item"><a href="../index/index.html" class="nav-link text-white">Início</a></li>
-        <li class="nav-item"><a href="../funcionarios/funcionarios.html" class="nav-link text-white">Funcionários</a></li>
-        <li class="nav-item"><a href="../vacinas/salaVacina.html" class="nav-link text-white">Sala de Vacinas</a></li> 
-        <li class="nav-item"><a href="vacinasHoje.html" class="nav-link text-white">Vacinas Futuras</a></li>
-        <li class="nav-item"><a href="../vacinas/cartaoVacinas.html" class="nav-link text-white">Cartão de Vacinas</a></li>
-        <li class="nav-item"><a href="../login/login.html" class="nav-link text-white">Login</a></li>  
-     <li class="nav-item"><a href="#" class="nav-link text-white" onclick="logout()">Sair</a></li>
-     </ul>
- </nav>
+        <main class="container-fluid py-4 px-4">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h1 class="h2 mb-0"><i class="bi bi-card-checklist me-2"></i>Cartão de Vacinas</h1>
+                <div class="col-md-4">
+                    <select id="funcionarioSelect" class="form-select">
+                        <option value="" selected disabled>Selecione um funcionário</option>
+                        <!-- Opções serão preenchidas via JavaScript -->
+                    </select>
+                </div>
+            </div>
 
- <div class="content">
-    <div class="container mt-4">
-    <h2>Cartão de Vacinas</h2>
-    <div class="card">
-        <div class="card-header">
-            <h5>Histórico de Vacinação</h5>
-        </div>
-        <div class="card-body">
-            <table class="table" id="tabelaCartaoVacinas">
-                <thead>
-                    <tr>
-                        <th>Vacina</th>
-                        <th>Data</th>
-                        <th>Dose</th>
-                        <th>Responsável</th>
-                        <th>Comprovante</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Dados serão preenchidos via JavaScript -->
-                </tbody>
-            </table>
-        </div>
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h2 class="h5 mb-0"><i class="bi bi-person-vcard me-2"></i>Histórico de Vacinação</h2>
+                        <button id="btn-imprimir" class="btn btn-light btn-sm">
+                            <i class="bi bi-printer me-1"></i>Imprimir
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div id="cartao-container">
+                        <div class="d-flex justify-content-between mb-4">
+                            <div>
+                                <h4 id="funcionario-nome" class="mb-1">-</h4>
+                                <p id="funcionario-info" class="text-muted mb-0">-</p>
+                            </div>
+                            <div class="text-end">
+                                <p class="mb-1"><strong>Registro:</strong> <span id="funcionario-registro">-</span></p>
+                                <p class="mb-0"><strong>CPF:</strong> <span id="funcionario-cpf">-</span></p>
+                            </div>
+                        </div>
+
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Data</th>
+                                        <th>Vacina</th>
+                                        <th>Código</th>
+                                        <th>Lote</th>
+                                        <th>Aplicado por</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="historico-vacinas">
+                                    <!-- Dados serão carregados via JavaScript -->
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div id="sem-registros" class="text-center py-5 text-muted">
+                            <i class="bi bi-info-circle display-6"></i>
+                            <p class="mt-3">Nenhum registro de vacinação encontrado</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-</div>
-</div>
 
+    <!-- Toast Notification -->
+    <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1100"></div>
+
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scriptCartaoVacina.js"></script>
+    <script src="../navbar.js"></script>
+    <script src="scriptCartaoVacinas.js" type="module"></script>
 </body>
 </html>
